1. gitignore files 디렉토리 추가 2. SampleFile 서비스 및 테스트코드 추가 3. local file upload-dir 프로젝트 내 files 로 설정 4. 테스트 이미지 추가 5. 파일 테스트 코드 수행시 middlePath 옵션을 줄수 있도록 개선 6. ValidationUtil IP, PORT 유효성 검증 유틸 추가 7. spring-boot-configuration-processor 디펜던시 추가 8. Sample File API Docs 문구 수정 9. Sample File API defaultValue 수정